Bug 1452745 - Annotate crash pings with actual display and platform versions r=gsvelto

Before we were falling back to using the raw version, which isn't
correct on at least beta (i.e. we would get `60.0` instead of `60.0b1`).

MozReview-Commit-ID: 7NfV6iRoj4y